--- a/eGalaxy9/src/app/course-list/course-list.component.html
+++ b/eGalaxy9/src/app/course-list/course-list.component.html
@@ -22,6 +22,7 @@
             <button (click)="deleteCourse(course.id)" class="btn btn-danger">Delete</button>
                         <button (click)="updateCourse(course.id)" class="btn btn-warning" style="margin-left: 10px">Update</button>
                         <button (click)="courseDetails(course.id)" class="btn btn-success" style="margin-left: 10px">Details</button>
+                        <button class="btn btn-primary" style="margin-left: 10px;">Add to Cart</button>
         </mat-cell>        
         </ng-container>
         <mat-header-row *matHeaderRowDef="columnsName" color="primary"></mat-header-row>
